Aggiunto commenti e traccia del progetto