@@ -7,6 +7,7 @@ import org.jetbrains.annotations.NotNull;
 import java.io.*;
 import java.lang.reflect.Modifier;
 import java.net.HttpURLConnection;
+import java.net.URI;
 import java.net.URL;
 import java.nio.charset.StandardCharsets;
 
@@ -18,22 +19,28 @@ public class Connection {
         Connection.porta = porta;
     }
     
-    static <T extends Serializable> StringBuilder sendDataToBacked(T data, int porta,
-                                                                   String sub_directory)
-    throws Error {
+    /**
+     * Invia i dati al backend
+     *
+     * @param data          dati da inviare
+     * @param porta         porta dove aprire la connessione
+     * @param sub_directory url dove inviare i dati
+     * @param <T>           tipo generico che deve essere serializzatile
+     * @return la risposta del backend
+     */
+    static <T extends Serializable> @NotNull StringBuilder sendDataToBacked(T data, int porta,
+                                                                            String sub_directory) {
         if (Connection.porta == -1) {
             Connection.porta = porta;
         }
         
-        HttpURLConnection conn = getHttpURLConnection(sub_directory, "POST");
-        
+        HttpURLConnection conn = getHttpURLConnection(sub_directory, methods.POST);
         
         // Aggiunge la possibilità di serializzare anche i campi statici
         GsonBuilder gsonBuilder = new GsonBuilder();
         gsonBuilder.excludeFieldsWithModifiers(Modifier.TRANSIENT);
         
         // Dati da inviare al backend in formato JSON
-        // Gson gson = new Gson();
         Gson gson = gsonBuilder.create(); // crea gson con la corrente configurazione
         String jsonInputString = gson.toJson(data);
         
@@ -55,25 +62,33 @@ public class Connection {
             }
             System.out.println("Risposta: " + response); // Stampare la risposta dal backend
         } catch (Exception ignored) {
-        }
-        if (response.indexOf("error") != -1) {
-            throw new Error(String.valueOf(response));
+            System.out.println("Errore: nella lettura della request");
         }
         conn.disconnect();
         return response;
     }
     
+    /**
+     * Crea una connessione verso un URL con una dato metodo
+     *
+     * @param sub_directory URL della directory dove creare la connessione
+     * @param methods       metodo di creazione della connessione
+     * @return la connessione
+     */
     @NotNull
-    private static HttpURLConnection getHttpURLConnection(String sub_directory, String methods) {
-        StringBuilder subdirectory = new StringBuilder(sub_directory == null ? "" : sub_directory);
+    private static HttpURLConnection getHttpURLConnection(String sub_directory, methods methods) {
+        StringBuilder subdirectory = sub_directory == null ? null : new StringBuilder(
+                sub_directory);
         String url_path = String.format("http://localhost:%d%s", Connection.porta,
-                subdirectory.isEmpty() ? "" : subdirectory.insert(0, '/'));
+                subdirectory == null ? "" : subdirectory.insert(0, '/'));
         
         HttpURLConnection conn;
         try {
-            URL url = new URL(url_path); // URL del backend Python
+            URI uri = URI.create(url_path);
+            URL url = uri.toURL(); // URL del backend Python
             conn = (HttpURLConnection) url.openConnection();
-            conn.setRequestMethod(methods);
+            // setto il metodo (GET, POST, DELETE, PUT)
+            conn.setRequestMethod(methods.toString());
             conn.setRequestProperty("Content-Type", "application/json");
             conn.setDoOutput(true);
         } catch (Exception e) {
@@ -81,6 +96,10 @@ public class Connection {
                     "Non è stato possibile instaurare una connessione con il Backend");
         }
         return conn;
+    }
+    
+    enum methods {
+        GET, POST, DELETE, PUT
     }
     
 }
